@@ -27,6 +27,8 @@ Version 6
 --Made start/end_self_test more lenient on server (not sending FAILED in cases
   that are likely caused by timeouts and client retries).
 
+--Made other calls on server more tolerant of client retries.
+
 
 
 Version 5   2013-March-11
